# eva

./: .gitignore  CMakeLists.txt  CONCEPT.md  README.md  TODO.md
src/: main.c
src/snorlax/: command.c  command.h  descriptor.c  descriptor.h  eva.c  eva.h  event.c  event.h  socket.c  socket.h
src/snorlax/benchmark/: client.c  redis.c  server.c
src/snorlax/command/: event.c  event.h
src/snorlax/command/event/: check.c  generator.c  generator.h  main.c  subscription.c  subscription.h  type.h
src/snorlax/command/event/subscription/: action.c  action.h  event.c  event.h  process.c  process.h  type.h
src/snorlax/console/: in.c  in.h  main.c  out.c  out.h
src/snorlax/descriptor/: action.h  buffer.h  event.c  event.h  exception.c  exception.h  state.h
src/snorlax/descriptor/event/: generator.c  generator.h  handler.c  handler.h  subscription.c  subscription.h  type.h
src/snorlax/descriptor/event/generator/: epoll.c  epoll.h  state.h
src/snorlax/descriptor/event/generator/epoll/control/: type.h
src/snorlax/descriptor/event/generator/epoll/subscription/: process.c  process.h  state.h
src/snorlax/descriptor/event/subscription/: action.c  action.h  handler.c  handler.h  process.c  process.h  state.c  state.h  type.h
src/snorlax/descriptor/exception/: no.h  type.h
src/snorlax/event/: check.c  engine.c  engine.h  generator.c  generator.h  handler.h  object.h  param.h  processor.c  processor.h  queue.c  queue.h  subscription.h  type.h
src/snorlax/event/engine/: conf.c  conf.h  epoll.c  epoll.h  state.h
src/snorlax/event/generator/: set.c  set.h  state.h
src/snorlax/event/generator/control/: type.h
src/snorlax/event/handler/: array.c  array.h
src/snorlax/event/object/: queue.c  queue.h
src/snorlax/event/object/queue/: node.h
src/snorlax/event/processor/: pool.c  pool.h
src/snorlax/event/processor/pool/: state.h
src/snorlax/event/subscription/: event.c  event.h  meta.h  type.h
src/snorlax/event/subscription/event/: queue.c  queue.h
src/snorlax/socket/: client.c  client.h  main.c  server.c  server.h  session.c  session.h
src/snorlax/socket/client/: benchmark.c  main.c  pool.c
src/snorlax/socket/client/event/: subscription.c  subscription.h
src/snorlax/socket/client/event/subscription/: pool.c  pool.h
src/snorlax/socket/client/event/subscription/pool/: node.c
src/snorlax/socket/event/: subscription.h
src/snorlax/socket/main/: server.c
src/snorlax/socket/server/: benchmark.c  main.c
src/snorlax/socket/server/event/: subscription.c  subscription.h
src/snorlax/socket/server/event/subscription/: list.c  list.h  meta.h
src/snorlax/socket/server/event/subscription/list/: node.c
src/snorlax/socket/session/event/: subscription.c  subscription.h
src/snorlax/socket/tcp/: client.c  client.h  server.c  server.h  session.c  session.h
